--- a/coverage_html_report/index.html
+++ b/coverage_html_report/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">100%</span>
+            <span class="pc_cov">34%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -54,7 +54,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-22 02:07 +0000
+            created at 2024-08-24 03:15 +0000
         </p>
     </div>
 </header>
@@ -79,19 +79,26 @@
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html">src/elt_practice_2024/data_extraction.py</a></td>
-                <td>22</td>
+                <td>29</td>
+                <td>29</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 29">0%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_utils_py.html">src/elt_practice_2024/utils.py</a></td>
+                <td>15</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="22 22">100%</td>
+                <td class="right" data-ratio="15 15">100%</td>
             </tr>
         </tbody>
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>22</td>
+                <td>44</td>
+                <td>29</td>
                 <td>0</td>
-                <td>0</td>
-                <td class="right" data-ratio="22 22">100%</td>
+                <td class="right" data-ratio="15 44">34%</td>
             </tr>
         </tfoot>
     </table>
@@ -103,11 +110,11 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-22 02:07 +0000
+            created at 2024-08-24 03:15 +0000
         </p>
     </div>
     <aside class="hidden">
-        <a id="prevFileLink" class="nav" href="z_27bcb07cf676e1a3_data_extraction_py.html"></a>
+        <a id="prevFileLink" class="nav" href="z_27bcb07cf676e1a3_utils_py.html"></a>
         <a id="nextFileLink" class="nav" href="z_27bcb07cf676e1a3___init___py.html"></a>
         <button type="button" class="button_prev_file" data-shortcut="["></button>
         <button type="button" class="button_next_file" data-shortcut="]"></button>
