feature/data-extraction-v2: Create custom class to manage data sources

--- a/coverage_html_report/index.html
+++ b/coverage_html_report/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">100%</span>
+            <span class="pc_cov">47%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -54,7 +54,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-27 00:46 +0000
+            created at 2024-08-30 21:55 -0700
         </p>
     </div>
 </header>
@@ -78,11 +78,18 @@
                 <td class="right" data-ratio="0 0">100%</td>
             </tr>
             <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td>29</td>
+                <td>29</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 29">0%</td>
+            </tr>
+            <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html">src/elt_practice_2024/data_extraction.py</a></td>
-                <td>31</td>
+                <td>30</td>
+                <td>10</td>
                 <td>0</td>
-                <td>0</td>
-                <td class="right" data-ratio="31 31">100%</td>
+                <td class="right" data-ratio="20 30">67%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_utils_py.html">src/elt_practice_2024/utils.py</a></td>
@@ -95,10 +102,10 @@
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>46</td>
+                <td>74</td>
+                <td>39</td>
                 <td>0</td>
-                <td>0</td>
-                <td class="right" data-ratio="46 46">100%</td>
+                <td class="right" data-ratio="35 74">47%</td>
             </tr>
         </tfoot>
     </table>
@@ -110,7 +117,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-27 00:46 +0000
+            created at 2024-08-30 21:55 -0700
         </p>
     </div>
     <aside class="hidden">
