--- a/coverage_html_report/function_index.html
+++ b/coverage_html_report/function_index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">100%</span>
+            <span class="pc_cov">47%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -55,7 +55,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-27 00:46 +0000
+            created at 2024-08-30 21:55 -0700
         </p>
     </div>
 </header>
@@ -81,12 +81,60 @@
                 <td class="right" data-ratio="0 0">100%</td>
             </tr>
             <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t12">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t12"><data value='init__'>ClientDataManager.__init__</data></a></td>
+                <td>5</td>
+                <td>5</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 5">0%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t26">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t26"><data value='get_client_data'>ClientDataManager._get_client_data</data></a></td>
+                <td>4</td>
+                <td>4</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 4">0%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t37">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t37"><data value='get_file_types'>ClientDataManager.get_file_types</data></a></td>
+                <td>1</td>
+                <td>1</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 1">0%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t45">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t45"><data value='get_file_names'>ClientDataManager.get_file_names</data></a></td>
+                <td>4</td>
+                <td>4</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 4">0%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t57">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t57"><data value='get_file_data'>ClientDataManager.get_file_data</data></a></td>
+                <td>7</td>
+                <td>7</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 7">0%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
+                <td>8</td>
+                <td>8</td>
+                <td>0</td>
+                <td class="right" data-ratio="0 8">0%</td>
+            </tr>
+            <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html">src/elt_practice_2024/data_extraction.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
-                <td>31</td>
+                <td>30</td>
+                <td>10</td>
                 <td>0</td>
-                <td>0</td>
-                <td class="right" data-ratio="31 31">100%</td>
+                <td class="right" data-ratio="20 30">67%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_utils_py.html#t12">src/elt_practice_2024/utils.py</a></td>
@@ -109,10 +157,10 @@
             <tr class="total">
                 <td class="name left">Total</td>
                 <td class="name left">&nbsp;</td>
-                <td>46</td>
+                <td>74</td>
+                <td>39</td>
                 <td>0</td>
-                <td>0</td>
-                <td class="right" data-ratio="46 46">100%</td>
+                <td class="right" data-ratio="35 74">47%</td>
             </tr>
         </tfoot>
     </table>
@@ -124,7 +172,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-27 00:46 +0000
+            created at 2024-08-30 21:55 -0700
         </p>
     </div>
     <aside class="hidden">
