--- a/coverage_html_report/z_27bcb07cf676e1a3___init___py.html
+++ b/coverage_html_report/z_27bcb07cf676e1a3___init___py.html
@@ -62,10 +62,10 @@
         <p class="text">
             <a id="prevFileLink" class="nav" href="index.html">&#xab; prev</a> &nbsp; &nbsp;
             <a id="indexLink" class="nav" href="index.html">&Hat; index</a> &nbsp; &nbsp;
-            <a id="nextFileLink" class="nav" href="z_27bcb07cf676e1a3_data_extraction_py.html">&#xbb; next</a>
+            <a id="nextFileLink" class="nav" href="z_27bcb07cf676e1a3_client_data_manager_py.html">&#xbb; next</a>
             &nbsp; &nbsp; &nbsp;
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-27 00:40 +0000
+            created at 2024-08-30 21:55 -0700
         </p>
         <aside class="hidden">
             <button type="button" class="button_next_chunk" data-shortcut="j"></button>
@@ -86,10 +86,10 @@
         <p>
             <a class="nav" href="index.html">&#xab; prev</a> &nbsp; &nbsp;
             <a class="nav" href="index.html">&Hat; index</a> &nbsp; &nbsp;
-            <a class="nav" href="z_27bcb07cf676e1a3_data_extraction_py.html">&#xbb; next</a>
+            <a class="nav" href="z_27bcb07cf676e1a3_client_data_manager_py.html">&#xbb; next</a>
             &nbsp; &nbsp; &nbsp;
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-27 00:40 +0000
+            created at 2024-08-30 21:55 -0700
         </p>
     </div>
 </footer>
