--- a/coverage_html_report/class_index.html
+++ b/coverage_html_report/class_index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">47%</span>
+            <span class="pc_cov">64%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -55,7 +55,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-30 21:55 -0700
+            created at 2024-08-31 23:16 +0000
         </p>
     </div>
 </header>
@@ -83,30 +83,30 @@
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t11">src/elt_practice_2024/client_data_manager.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t11"><data value='ClientDataManager'>ClientDataManager</data></a></td>
-                <td>21</td>
-                <td>21</td>
+                <td>31</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 21">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="31 31">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html">src/elt_practice_2024/client_data_manager.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
-                <td>8</td>
-                <td>8</td>
+                <td>9</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 8">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="9 9">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html">src/elt_practice_2024/data_extraction.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
-                <td>30</td>
-                <td>10</td>
+                <td>31</td>
+                <td>31</td>
                 <td>0</td>
-                <td class="right" data-ratio="20 30">67%</td>
+                <td class="right" data-ratio="0 31">0%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_utils_py.html">src/elt_practice_2024/utils.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_utils_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html">src/elt_practice_2024/data_extraction_utils.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
                 <td>15</td>
                 <td>0</td>
                 <td>0</td>
@@ -117,10 +117,10 @@
             <tr class="total">
                 <td class="name left">Total</td>
                 <td class="name left">&nbsp;</td>
-                <td>74</td>
-                <td>39</td>
+                <td>86</td>
+                <td>31</td>
                 <td>0</td>
-                <td class="right" data-ratio="35 74">47%</td>
+                <td class="right" data-ratio="55 86">64%</td>
             </tr>
         </tfoot>
     </table>
@@ -132,7 +132,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-30 21:55 -0700
+            created at 2024-08-31 23:16 +0000
         </p>
     </div>
     <aside class="hidden">
