--- a/coverage_html_report/function_index.html
+++ b/coverage_html_report/function_index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">47%</span>
+            <span class="pc_cov">64%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -55,7 +55,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-30 21:55 -0700
+            created at 2024-08-31 23:16 +0000
         </p>
     </div>
 </header>
@@ -84,69 +84,77 @@
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t12">src/elt_practice_2024/client_data_manager.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t12"><data value='init__'>ClientDataManager.__init__</data></a></td>
                 <td>5</td>
-                <td>5</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 5">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="5 5">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t26">src/elt_practice_2024/client_data_manager.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t26"><data value='get_client_data'>ClientDataManager._get_client_data</data></a></td>
                 <td>4</td>
-                <td>4</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 4">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="4 4">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t37">src/elt_practice_2024/client_data_manager.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t37"><data value='get_file_types'>ClientDataManager.get_file_types</data></a></td>
                 <td>1</td>
-                <td>1</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 1">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="1 1">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t45">src/elt_practice_2024/client_data_manager.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t45"><data value='get_file_names'>ClientDataManager.get_file_names</data></a></td>
                 <td>4</td>
-                <td>4</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 4">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="4 4">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t57">src/elt_practice_2024/client_data_manager.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t57"><data value='get_file_data'>ClientDataManager.get_file_data</data></a></td>
                 <td>7</td>
-                <td>7</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 7">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="7 7">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t75">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t75"><data value='get_all_filenames'>ClientDataManager.get_all_filenames</data></a></td>
+                <td>10</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="10 10">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html">src/elt_practice_2024/client_data_manager.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
-                <td>8</td>
-                <td>8</td>
+                <td>9</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 8">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="9 9">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html">src/elt_practice_2024/data_extraction.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
-                <td>30</td>
-                <td>10</td>
+                <td>31</td>
+                <td>31</td>
                 <td>0</td>
-                <td class="right" data-ratio="20 30">67%</td>
+                <td class="right" data-ratio="0 31">0%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_utils_py.html#t12">src/elt_practice_2024/utils.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_utils_py.html#t12"><data value='download_file'>download_file</data></a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html#t13">src/elt_practice_2024/data_extraction_utils.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html#t13"><data value='download_file'>download_file</data></a></td>
                 <td>11</td>
                 <td>0</td>
                 <td>0</td>
                 <td class="right" data-ratio="11 11">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_utils_py.html">src/elt_practice_2024/utils.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_utils_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html">src/elt_practice_2024/data_extraction_utils.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
                 <td>4</td>
                 <td>0</td>
                 <td>0</td>
@@ -157,10 +165,10 @@
             <tr class="total">
                 <td class="name left">Total</td>
                 <td class="name left">&nbsp;</td>
-                <td>74</td>
-                <td>39</td>
+                <td>86</td>
+                <td>31</td>
                 <td>0</td>
-                <td class="right" data-ratio="35 74">47%</td>
+                <td class="right" data-ratio="55 86">64%</td>
             </tr>
         </tfoot>
     </table>
@@ -172,7 +180,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-30 21:55 -0700
+            created at 2024-08-31 23:16 +0000
         </p>
     </div>
     <aside class="hidden">
