--- a/coverage_html_report/index.html
+++ b/coverage_html_report/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">47%</span>
+            <span class="pc_cov">64%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -54,7 +54,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-30 21:55 -0700
+            created at 2024-08-31 23:16 +0000
         </p>
     </div>
 </header>
@@ -79,20 +79,20 @@
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html">src/elt_practice_2024/client_data_manager.py</a></td>
-                <td>29</td>
-                <td>29</td>
+                <td>40</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 29">0%</td>
+                <td>0</td>
+                <td class="right" data-ratio="40 40">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html">src/elt_practice_2024/data_extraction.py</a></td>
-                <td>30</td>
-                <td>10</td>
+                <td>31</td>
+                <td>31</td>
                 <td>0</td>
-                <td class="right" data-ratio="20 30">67%</td>
+                <td class="right" data-ratio="0 31">0%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_utils_py.html">src/elt_practice_2024/utils.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html">src/elt_practice_2024/data_extraction_utils.py</a></td>
                 <td>15</td>
                 <td>0</td>
                 <td>0</td>
@@ -102,10 +102,10 @@
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>74</td>
-                <td>39</td>
+                <td>86</td>
+                <td>31</td>
                 <td>0</td>
-                <td class="right" data-ratio="35 74">47%</td>
+                <td class="right" data-ratio="55 86">64%</td>
             </tr>
         </tfoot>
     </table>
@@ -117,11 +117,11 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-30 21:55 -0700
+            created at 2024-08-31 23:16 +0000
         </p>
     </div>
     <aside class="hidden">
-        <a id="prevFileLink" class="nav" href="z_27bcb07cf676e1a3_utils_py.html"></a>
+        <a id="prevFileLink" class="nav" href="z_27bcb07cf676e1a3_data_extraction_utils_py.html"></a>
         <a id="nextFileLink" class="nav" href="z_27bcb07cf676e1a3___init___py.html"></a>
         <button type="button" class="button_prev_file" data-shortcut="["></button>
         <button type="button" class="button_next_file" data-shortcut="]"></button>
