--- a/coverage_html_report/function_index.html
+++ b/coverage_html_report/function_index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">64%</span>
+            <span class="pc_cov">67%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -55,7 +55,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-31 16:34 -0700
+            created at 2024-08-31 17:26 -0700
         </p>
     </div>
 </header>
@@ -145,30 +145,38 @@
                 <td class="right" data-ratio="0 31">0%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html#t13">src/elt_practice_2024/data_extraction_utils.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html#t13"><data value='download_file'>download_file</data></a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html#t16">src/elt_practice_2024/data_extraction_utils.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html#t16"><data value='download_file'>download_file</data></a></td>
                 <td>11</td>
                 <td>0</td>
                 <td>0</td>
                 <td class="right" data-ratio="11 11">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html">src/elt_practice_2024/data_extraction_utils.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html#t44">src/elt_practice_2024/data_extraction_utils.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html#t44"><data value='remove_non_printable_chars'>remove_non_printable_chars</data></a></td>
                 <td>4</td>
                 <td>0</td>
                 <td>0</td>
                 <td class="right" data-ratio="4 4">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html">src/elt_practice_2024/data_extraction_utils.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
+                <td>7</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="7 7">100%</td>
             </tr>
         </tbody>
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
                 <td class="name left">&nbsp;</td>
-                <td>86</td>
+                <td>93</td>
                 <td>31</td>
                 <td>0</td>
-                <td class="right" data-ratio="55 86">64%</td>
+                <td class="right" data-ratio="62 93">67%</td>
             </tr>
         </tfoot>
     </table>
@@ -180,7 +188,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-08-31 16:34 -0700
+            created at 2024-08-31 17:26 -0700
         </p>
     </div>
     <aside class="hidden">
