--- a/coverage_html_report/class_index.html
+++ b/coverage_html_report/class_index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">60%</span>
+            <span class="pc_cov">68%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -55,7 +55,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-01 18:47 -0700
+            created at 2024-09-12 02:49 +0000
         </p>
     </div>
 </header>
@@ -83,10 +83,10 @@
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t12">src/elt_practice_2024/client_data_manager.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t12"><data value='ClientDataManager'>ClientDataManager</data></a></td>
-                <td>36</td>
+                <td>28</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="36 36">100%</td>
+                <td class="right" data-ratio="28 28">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html">src/elt_practice_2024/client_data_manager.py</a></td>
@@ -99,28 +99,28 @@
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html">src/elt_practice_2024/data_extraction.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
-                <td>30</td>
-                <td>30</td>
+                <td>47</td>
+                <td>47</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 30">0%</td>
+                <td class="right" data-ratio="0 47">0%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html">src/elt_practice_2024/data_extraction_utils.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
-                <td>42</td>
-                <td>17</td>
+                <td>63</td>
                 <td>0</td>
-                <td class="right" data-ratio="25 42">60%</td>
+                <td>0</td>
+                <td class="right" data-ratio="63 63">100%</td>
             </tr>
         </tbody>
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
                 <td class="name left">&nbsp;</td>
-                <td>118</td>
+                <td>148</td>
                 <td>47</td>
                 <td>0</td>
-                <td class="right" data-ratio="71 118">60%</td>
+                <td class="right" data-ratio="101 148">68%</td>
             </tr>
         </tfoot>
     </table>
@@ -132,7 +132,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-01 18:47 -0700
+            created at 2024-09-12 02:49 +0000
         </p>
     </div>
     <aside class="hidden">
