feature/refactor_data_extraction: Refactoring data extraction logic

--- a/coverage_html_report/class_index.html
+++ b/coverage_html_report/class_index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">68%</span>
+            <span class="pc_cov">84%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -55,7 +55,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-12 02:49 +0000
+            created at 2024-09-13 22:16 +0000
         </p>
     </div>
 </header>
@@ -81,28 +81,36 @@
                 <td class="right" data-ratio="0 0">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t12">src/elt_practice_2024/client_data_manager.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t12"><data value='ClientDataManager'>ClientDataManager</data></a></td>
-                <td>28</td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t16">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t16"><data value='ClientDataManager'>ClientDataManager</data></a></td>
+                <td>38</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="28 28">100%</td>
+                <td class="right" data-ratio="38 38">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html">src/elt_practice_2024/client_data_manager.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
-                <td>10</td>
+                <td>13</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="10 10">100%</td>
+                <td class="right" data-ratio="13 13">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_custom_logger_py.html">src/elt_practice_2024/custom_logger.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_custom_logger_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
+                <td>15</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="15 15">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html">src/elt_practice_2024/data_extraction.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html"><data value=''><span class='no-noun'>(no class)</span></data></a></td>
-                <td>47</td>
-                <td>47</td>
+                <td>25</td>
+                <td>25</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 47">0%</td>
+                <td class="right" data-ratio="0 25">0%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html">src/elt_practice_2024/data_extraction_utils.py</a></td>
@@ -117,10 +125,10 @@
             <tr class="total">
                 <td class="name left">Total</td>
                 <td class="name left">&nbsp;</td>
-                <td>148</td>
-                <td>47</td>
+                <td>154</td>
+                <td>25</td>
                 <td>0</td>
-                <td class="right" data-ratio="101 148">68%</td>
+                <td class="right" data-ratio="129 154">84%</td>
             </tr>
         </tfoot>
     </table>
@@ -132,7 +140,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-12 02:49 +0000
+            created at 2024-09-13 22:16 +0000
         </p>
     </div>
     <aside class="hidden">
