--- a/coverage_html_report/function_index.html
+++ b/coverage_html_report/function_index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">68%</span>
+            <span class="pc_cov">84%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -55,7 +55,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-12 02:49 +0000
+            created at 2024-09-13 22:16 +0000
         </p>
     </div>
 </header>
@@ -81,68 +81,84 @@
                 <td class="right" data-ratio="0 0">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t13">src/elt_practice_2024/client_data_manager.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t13"><data value='init__'>ClientDataManager.__init__</data></a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t17">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t17"><data value='init__'>ClientDataManager.__init__</data></a></td>
+                <td>5</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="5 5">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t30">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t30"><data value='get_client_data'>ClientDataManager._get_client_data</data></a></td>
                 <td>4</td>
                 <td>0</td>
                 <td>0</td>
                 <td class="right" data-ratio="4 4">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t25">src/elt_practice_2024/client_data_manager.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t25"><data value='get_client_data'>ClientDataManager._get_client_data</data></a></td>
-                <td>4</td>
-                <td>0</td>
-                <td>0</td>
-                <td class="right" data-ratio="4 4">100%</td>
-            </tr>
-            <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t36">src/elt_practice_2024/client_data_manager.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t36"><data value='get_file_types'>ClientDataManager.get_file_types</data></a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t41">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t41"><data value='get_file_types'>ClientDataManager.get_file_types</data></a></td>
                 <td>1</td>
                 <td>0</td>
                 <td>0</td>
                 <td class="right" data-ratio="1 1">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t44">src/elt_practice_2024/client_data_manager.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t44"><data value='get_files_by_type'>ClientDataManager.get_files_by_type</data></a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t49">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t49"><data value='get_files_by_type'>ClientDataManager.get_files_by_type</data></a></td>
                 <td>4</td>
                 <td>0</td>
                 <td>0</td>
                 <td class="right" data-ratio="4 4">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t56">src/elt_practice_2024/client_data_manager.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t56"><data value='get_metadata_by_file_type'>ClientDataManager.get_metadata_by_file_type</data></a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t61">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t61"><data value='get_metadata_by_file_type'>ClientDataManager.get_metadata_by_file_type</data></a></td>
                 <td>4</td>
                 <td>0</td>
                 <td>0</td>
                 <td class="right" data-ratio="4 4">100%</td>
             </tr>
             <tr class="region">
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t68">src/elt_practice_2024/client_data_manager.py</a></td>
-                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t68"><data value='get_all_filenames'>ClientDataManager.get_all_filenames</data></a></td>
-                <td>11</td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t73">src/elt_practice_2024/client_data_manager.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html#t73"><data value='download_and_process_files'>ClientDataManager.download_and_process_files</data></a></td>
+                <td>20</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="11 11">100%</td>
+                <td class="right" data-ratio="20 20">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html">src/elt_practice_2024/client_data_manager.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
-                <td>10</td>
+                <td>13</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="10 10">100%</td>
+                <td class="right" data-ratio="13 13">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_custom_logger_py.html#t16">src/elt_practice_2024/custom_logger.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_custom_logger_py.html#t16"><data value='setup_custom_logger'>setup_custom_logger</data></a></td>
+                <td>9</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="9 9">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_custom_logger_py.html">src/elt_practice_2024/custom_logger.py</a></td>
+                <td class="name left"><a href="z_27bcb07cf676e1a3_custom_logger_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
+                <td>6</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="6 6">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html">src/elt_practice_2024/data_extraction.py</a></td>
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html"><data value=''><span class='no-noun'>(no function)</span></data></a></td>
-                <td>47</td>
-                <td>47</td>
+                <td>25</td>
+                <td>25</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 47">0%</td>
+                <td class="right" data-ratio="0 25">0%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html#t20">src/elt_practice_2024/data_extraction_utils.py</a></td>
@@ -181,10 +197,10 @@
             <tr class="total">
                 <td class="name left">Total</td>
                 <td class="name left">&nbsp;</td>
-                <td>148</td>
-                <td>47</td>
+                <td>154</td>
+                <td>25</td>
                 <td>0</td>
-                <td class="right" data-ratio="101 148">68%</td>
+                <td class="right" data-ratio="129 154">84%</td>
             </tr>
         </tfoot>
     </table>
@@ -196,7 +212,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-12 02:49 +0000
+            created at 2024-09-13 22:16 +0000
         </p>
     </div>
     <aside class="hidden">
