--- a/coverage_html_report/index.html
+++ b/coverage_html_report/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">68%</span>
+            <span class="pc_cov">84%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -54,7 +54,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-12 02:49 +0000
+            created at 2024-09-13 22:16 +0000
         </p>
     </div>
 </header>
@@ -79,17 +79,24 @@
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_client_data_manager_py.html">src/elt_practice_2024/client_data_manager.py</a></td>
-                <td>38</td>
+                <td>51</td>
                 <td>0</td>
                 <td>0</td>
-                <td class="right" data-ratio="38 38">100%</td>
+                <td class="right" data-ratio="51 51">100%</td>
+            </tr>
+            <tr class="region">
+                <td class="name left"><a href="z_27bcb07cf676e1a3_custom_logger_py.html">src/elt_practice_2024/custom_logger.py</a></td>
+                <td>15</td>
+                <td>0</td>
+                <td>0</td>
+                <td class="right" data-ratio="15 15">100%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_py.html">src/elt_practice_2024/data_extraction.py</a></td>
-                <td>47</td>
-                <td>47</td>
+                <td>25</td>
+                <td>25</td>
                 <td>0</td>
-                <td class="right" data-ratio="0 47">0%</td>
+                <td class="right" data-ratio="0 25">0%</td>
             </tr>
             <tr class="region">
                 <td class="name left"><a href="z_27bcb07cf676e1a3_data_extraction_utils_py.html">src/elt_practice_2024/data_extraction_utils.py</a></td>
@@ -102,10 +109,10 @@
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>148</td>
-                <td>47</td>
+                <td>154</td>
+                <td>25</td>
                 <td>0</td>
-                <td class="right" data-ratio="101 148">68%</td>
+                <td class="right" data-ratio="129 154">84%</td>
             </tr>
         </tfoot>
     </table>
@@ -117,7 +124,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.6.1">coverage.py v7.6.1</a>,
-            created at 2024-09-12 02:49 +0000
+            created at 2024-09-13 22:16 +0000
         </p>
     </div>
     <aside class="hidden">
